[workspace]
members = ["programs/*", "programs/invariant/invariant-types"]
[profile.test]
overflow-checks = false
# Each handler has to be specified as [[bin]]
[[bin]]
name = "handler"
path = "api/handler.rs"
# [profile.release]
# lto = "fat"
# codegen-units = 1
# overflow-checks = false

# [profile.release.build-override]
# opt-level = 3
# incremental = false
# codegen-units = 1
